--- a/lunch-go-where/package.json
+++ b/lunch-go-where/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.26.1",
     "axios-case-converter": "^0.9.0",
     "html-react-parser": "^1.4.9",
+    "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
