--- a/lunch-go-where/package.json
+++ b/lunch-go-where/package.json
@@ -14,6 +14,7 @@
     "axios-case-converter": "^0.9.0",
     "html-react-parser": "^1.4.9",
     "js-cookie": "^3.0.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "react": "^17.0.2",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
