--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,11 @@
 [[redirects]]
+from = "/api/*"
+to = "https://sei-35-lunchgowhere.herokuapp.com/:splat"
+status = 200
+force = true
+
+[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
 
-[[redirects]]
-from = "/*"
-to = "https://sei-35-lunchgowhere.herokuapp.com/:splat"
-status = 200
-force = true
